--- a/TripGuide/Scenes/Settings/PlannedToursTableView/PlannedTourTableViewCell.xib
+++ b/TripGuide/Scenes/Settings/PlannedToursTableView/PlannedTourTableViewCell.xib
@@ -4,53 +4,97 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Gilroy-Bold.ttf">
+            <string>Gilroy-Bold</string>
+        </array>
+        <array key="Gilroy-Regular.ttf">
+            <string>Gilroy-Regular</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PlannedTourTableViewCell" rowHeight="266" id="KGk-i7-Jjw" customClass="PlannedTourTableViewCell" customModule="TripGuide" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="372" height="266"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PlannedTourTableViewCell" rowHeight="256" id="KGk-i7-Jjw" customClass="PlannedTourTableViewCell" customModule="TripGuide" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="237" height="256"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="372" height="266"/>
+                <rect key="frame" x="0.0" y="0.0" width="237" height="256"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KrA-Ga-IED">
-                        <rect key="frame" x="20" y="20" width="332" height="128"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KrA-Ga-IED">
+                        <rect key="frame" x="5" y="20" width="120" height="120"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="128" id="OTr-CA-w7g"/>
-                            <constraint firstAttribute="width" constant="332" id="rPz-EX-vxc"/>
+                            <constraint firstAttribute="height" constant="120" id="LeI-Sx-7c6"/>
+                            <constraint firstAttribute="width" constant="120" id="XZH-sG-mrQ"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J09-5Y-UWG">
-                        <rect key="frame" x="30" y="188" width="312" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J09-5Y-UWG">
+                        <rect key="frame" x="10" y="150" width="217" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="312" id="E8z-wh-LjF"/>
-                            <constraint firstAttribute="height" constant="21" id="iYC-Cd-SaJ"/>
+                            <constraint firstAttribute="height" constant="30" id="FLd-TJ-lnq"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <fontDescription key="fontDescription" name="Gilroy-Regular" family="Gilroy-Regular" pointSize="17"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UcS-Tb-9JF">
+                        <rect key="frame" x="14" y="188" width="213" height="14"/>
+                        <fontDescription key="fontDescription" name="Gilroy-Regular" family="Gilroy-Regular" pointSize="20"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Price" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rGR-JG-e5J">
+                        <rect key="frame" x="26" y="210" width="185" height="22"/>
+                        <fontDescription key="fontDescription" name="Gilroy-Bold" family="Gilroy-Bold" pointSize="22"/>
+                        <color key="textColor" systemColor="systemGreenColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="❤️" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZnB-bH-lJK">
+                        <rect key="frame" x="191" y="20" width="36" height="39"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="39" id="anG-aK-bB1"/>
+                            <constraint firstAttribute="width" constant="36" id="dGu-SQ-JQj"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                        <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstItem="KrA-Ga-IED" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="2qV-fF-u5S"/>
-                    <constraint firstItem="J09-5Y-UWG" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="FG1-pM-1ql"/>
-                    <constraint firstItem="J09-5Y-UWG" firstAttribute="top" secondItem="KrA-Ga-IED" secondAttribute="bottom" constant="40" id="Js0-EX-Kvz"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="J09-5Y-UWG" secondAttribute="trailing" constant="10" id="Yhu-lM-dsu"/>
-                    <constraint firstItem="KrA-Ga-IED" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="Yna-w5-WTV"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="J09-5Y-UWG" secondAttribute="bottom" constant="46" id="s0i-6l-Dd1"/>
-                    <constraint firstAttribute="trailing" secondItem="KrA-Ga-IED" secondAttribute="trailing" constant="20" id="xHP-DD-q8N"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="rGR-JG-e5J" secondAttribute="trailing" constant="10" id="0tR-fz-rI9"/>
+                    <constraint firstAttribute="trailing" secondItem="J09-5Y-UWG" secondAttribute="trailing" constant="10" id="2le-HO-eRG"/>
+                    <constraint firstItem="rGR-JG-e5J" firstAttribute="top" secondItem="UcS-Tb-9JF" secondAttribute="bottom" constant="8" symbolic="YES" id="3iV-Y7-c4v"/>
+                    <constraint firstItem="J09-5Y-UWG" firstAttribute="top" secondItem="KrA-Ga-IED" secondAttribute="bottom" constant="10" id="58V-Zb-jcQ"/>
+                    <constraint firstAttribute="trailing" secondItem="UcS-Tb-9JF" secondAttribute="trailing" constant="10" id="7tp-YL-GIn"/>
+                    <constraint firstItem="KrA-Ga-IED" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="8dV-Hl-o1g"/>
+                    <constraint firstItem="rGR-JG-e5J" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="8n4-9c-jnp"/>
+                    <constraint firstItem="UcS-Tb-9JF" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="14" id="GDB-BX-Bph"/>
+                    <constraint firstItem="ZnB-bH-lJK" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="HtG-fK-Obx"/>
+                    <constraint firstAttribute="trailing" secondItem="ZnB-bH-lJK" secondAttribute="trailing" constant="10" id="R8K-4I-Axg"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="rGR-JG-e5J" secondAttribute="bottom" constant="13" id="itg-cd-SsR"/>
+                    <constraint firstItem="KrA-Ga-IED" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="jIL-22-bzG"/>
+                    <constraint firstItem="J09-5Y-UWG" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="oky-i3-47R"/>
+                    <constraint firstItem="UcS-Tb-9JF" firstAttribute="top" secondItem="J09-5Y-UWG" secondAttribute="bottom" constant="8" symbolic="YES" id="pDs-Pa-GLR"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="phonNum" destination="UcS-Tb-9JF" id="F1R-xh-b7d"/>
+                <outlet property="priceLbl" destination="rGR-JG-e5J" id="qti-IM-gmJ"/>
                 <outlet property="tourImage" destination="KrA-Ga-IED" id="w4M-he-vgz"/>
                 <outlet property="tourName" destination="J09-5Y-UWG" id="fCm-kU-5pA"/>
             </connections>
-            <point key="canvasLocation" x="167.93893129770993" y="65.492957746478879"/>
+            <point key="canvasLocation" x="263.35877862595419" y="30.281690140845072"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
