--- a/TripGuide/Scenes/Settings/PlannedToursTableView/PlannedTourTableViewCell.xib
+++ b/TripGuide/Scenes/Settings/PlannedToursTableView/PlannedTourTableViewCell.xib
@@ -4,53 +4,104 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Gilroy-Bold.ttf">
+            <string>Gilroy-Bold</string>
+        </array>
+        <array key="Gilroy-Regular.ttf">
+            <string>Gilroy-Regular</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PlannedTourTableViewCell" rowHeight="266" id="KGk-i7-Jjw" customClass="PlannedTourTableViewCell" customModule="TripGuide" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="372" height="266"/>
+            <rect key="frame" x="0.0" y="0.0" width="237" height="256"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="372" height="266"/>
+                <rect key="frame" x="0.0" y="0.0" width="237" height="256"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KrA-Ga-IED">
-                        <rect key="frame" x="20" y="20" width="332" height="128"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KrA-Ga-IED">
+                        <rect key="frame" x="5" y="20" width="120" height="120"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="128" id="OTr-CA-w7g"/>
-                            <constraint firstAttribute="width" constant="332" id="rPz-EX-vxc"/>
+                            <constraint firstAttribute="width" constant="120" id="4de-cJ-PG2"/>
+                            <constraint firstAttribute="height" constant="120" id="W2E-Bb-Vmf"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J09-5Y-UWG">
-                        <rect key="frame" x="30" y="188" width="312" height="21"/>
+                        <rect key="frame" x="10" y="150" width="217" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="312" id="E8z-wh-LjF"/>
-                            <constraint firstAttribute="height" constant="21" id="iYC-Cd-SaJ"/>
+                            <constraint firstAttribute="height" constant="30" id="KJJ-mc-h6M"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="Gilroy-Regular" family="Gilroy-Regular" pointSize="17"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="27j-5v-ps8">
+                        <rect key="frame" x="14" y="190" width="213" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="14" id="6IR-s3-l1B"/>
+                            <constraint firstAttribute="height" constant="20" id="F88-LU-4L0"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="Gilroy-Regular" family="Gilroy-Regular" pointSize="17"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="price" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wb6-l8-cH6">
+                        <rect key="frame" x="10" y="216" width="217" height="22"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="22" id="I63-gd-qhQ"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="Gilroy-Bold" family="Gilroy-Bold" pointSize="22"/>
+                        <color key="textColor" systemColor="systemGreenColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="❤️" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GRK-ll-XgJ">
+                        <rect key="frame" x="191" y="20" width="36" height="39"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="36" id="Izm-DQ-jpd"/>
+                            <constraint firstAttribute="height" constant="39" id="s4R-R7-KYQ"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstItem="KrA-Ga-IED" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="2qV-fF-u5S"/>
-                    <constraint firstItem="J09-5Y-UWG" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="FG1-pM-1ql"/>
-                    <constraint firstItem="J09-5Y-UWG" firstAttribute="top" secondItem="KrA-Ga-IED" secondAttribute="bottom" constant="40" id="Js0-EX-Kvz"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="J09-5Y-UWG" secondAttribute="trailing" constant="10" id="Yhu-lM-dsu"/>
-                    <constraint firstItem="KrA-Ga-IED" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="Yna-w5-WTV"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="J09-5Y-UWG" secondAttribute="bottom" constant="46" id="s0i-6l-Dd1"/>
-                    <constraint firstAttribute="trailing" secondItem="KrA-Ga-IED" secondAttribute="trailing" constant="20" id="xHP-DD-q8N"/>
+                    <constraint firstAttribute="bottom" secondItem="Wb6-l8-cH6" secondAttribute="bottom" constant="18" id="7ky-z5-qpP"/>
+                    <constraint firstItem="KrA-Ga-IED" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="B16-sN-PLm"/>
+                    <constraint firstAttribute="trailing" secondItem="GRK-ll-XgJ" secondAttribute="trailing" constant="10" id="HpL-mS-6dL"/>
+                    <constraint firstItem="27j-5v-ps8" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="14" id="K1p-VZ-mWQ"/>
+                    <constraint firstItem="KrA-Ga-IED" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="M0x-7s-h8n"/>
+                    <constraint firstItem="J09-5Y-UWG" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="N5E-dD-T4R"/>
+                    <constraint firstItem="27j-5v-ps8" firstAttribute="top" secondItem="J09-5Y-UWG" secondAttribute="bottom" constant="10" id="N8I-xR-UeR"/>
+                    <constraint firstItem="J09-5Y-UWG" firstAttribute="top" secondItem="KrA-Ga-IED" secondAttribute="bottom" constant="10" id="R7e-Kn-OB1"/>
+                    <constraint firstItem="Wb6-l8-cH6" firstAttribute="top" secondItem="27j-5v-ps8" secondAttribute="bottom" constant="6" id="TtC-43-Jex"/>
+                    <constraint firstItem="Wb6-l8-cH6" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="fLw-WU-j8o"/>
+                    <constraint firstAttribute="trailing" secondItem="J09-5Y-UWG" secondAttribute="trailing" constant="10" id="ngc-rP-Rwn"/>
+                    <constraint firstAttribute="trailing" secondItem="Wb6-l8-cH6" secondAttribute="trailing" constant="10" id="nxT-Ki-Qm8"/>
+                    <constraint firstAttribute="trailing" secondItem="27j-5v-ps8" secondAttribute="trailing" constant="10" id="vod-QR-sEx"/>
+                    <constraint firstItem="GRK-ll-XgJ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" symbolic="YES" id="yQI-zc-GRC"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="PhoneNumberlbl" destination="27j-5v-ps8" id="owh-TK-BXl"/>
+                <outlet property="priceLbl" destination="Wb6-l8-cH6" id="fzt-Oe-Cf1"/>
                 <outlet property="tourImage" destination="KrA-Ga-IED" id="w4M-he-vgz"/>
                 <outlet property="tourName" destination="J09-5Y-UWG" id="fCm-kU-5pA"/>
             </connections>
-            <point key="canvasLocation" x="167.93893129770993" y="65.492957746478879"/>
+            <point key="canvasLocation" x="167.17557251908397" y="65.492957746478879"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
