--- a/TripGuide/Scenes/Settings/CoreRestaurants/CoreRestCollectionView/CoreRestCollectionViewCell.xib
+++ b/TripGuide/Scenes/Settings/CoreRestaurants/CoreRestCollectionView/CoreRestCollectionViewCell.xib
@@ -6,68 +6,89 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Gilroy-Bold.ttf">
+            <string>Gilroy-Bold</string>
+        </array>
+        <array key="Gilroy-Regular.ttf">
+            <string>Gilroy-Regular</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CoreRestCollectionViewCell" id="gTV-IL-0wX" customClass="CoreRestCollectionViewCell" customModule="TripGuide" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="204" height="241"/>
+            <rect key="frame" x="0.0" y="0.0" width="187" height="238"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="204" height="241"/>
+                <rect key="frame" x="0.0" y="0.0" width="187" height="238"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DgQ-mZ-iNY">
-                        <rect key="frame" x="0.0" y="0.0" width="204" height="128"/>
+                        <rect key="frame" x="0.0" y="0.0" width="187" height="120"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="128" id="u6a-R1-HVs"/>
+                            <constraint firstAttribute="height" constant="120" id="BEb-wU-2dT"/>
+                            <constraint firstAttribute="width" constant="187" id="hIe-WP-iAh"/>
                         </constraints>
                     </imageView>
-                    <stackView opaque="NO" contentMode="scaleToFill" spacing="80" translatesAutoresizingMaskIntoConstraints="NO" id="1CH-xI-m0r">
-                        <rect key="frame" x="20" y="160" width="164" height="20.333333333333343"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jbd-xs-0Je">
-                                <rect key="frame" x="0.0" y="0.0" width="42.666666666666664" height="20.333333333333332"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uUb-Sf-l7d">
-                                <rect key="frame" x="122.66666666666664" y="0.0" width="41.333333333333329" height="20.333333333333332"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
+                    <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" spacing="80" translatesAutoresizingMaskIntoConstraints="NO" id="1CH-xI-m0r">
+                        <rect key="frame" x="12.000000000000018" y="160" width="44.333333333333336" height="11"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </stackView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eUL-wL-5QQ">
-                        <rect key="frame" x="10" y="200" width="184" height="20.333333333333343"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Location" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eUL-wL-5QQ">
+                        <rect key="frame" x="10" y="181" width="167" height="36.333333333333343"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="36.329999999999998" id="OiR-wN-sqV"/>
+                            <constraint firstAttribute="width" constant="167" id="gtw-hb-sQ6"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="Gilroy-Regular" family="Gilroy-Regular" pointSize="17"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jbd-xs-0Je">
+                        <rect key="frame" x="10" y="135" width="167" height="25"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="167" id="3D6-b1-e26"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="Gilroy-Bold" family="Gilroy-Bold" pointSize="22"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address : " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ggO-mw-nXi">
+                        <rect key="frame" x="15" y="165" width="157" height="11"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="157" id="N6q-R8-yIC"/>
+                            <constraint firstAttribute="height" constant="11" id="vPY-nS-pYa"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="Gilroy-Bold" family="Gilroy-Bold" pointSize="11"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstItem="eUL-wL-5QQ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="7nE-2D-uZn"/>
-                <constraint firstItem="1CH-xI-m0r" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="20" id="Khz-r9-rHZ"/>
-                <constraint firstItem="eUL-wL-5QQ" firstAttribute="top" secondItem="1CH-xI-m0r" secondAttribute="bottom" constant="19.666666666666657" id="MCt-i6-Xyl"/>
-                <constraint firstAttribute="trailing" secondItem="DgQ-mZ-iNY" secondAttribute="trailing" id="TMx-Ze-FgA"/>
-                <constraint firstAttribute="bottom" secondItem="eUL-wL-5QQ" secondAttribute="bottom" constant="20.670000000000002" id="UV4-Lo-IDM"/>
-                <constraint firstItem="DgQ-mZ-iNY" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="fDS-dP-J1x"/>
-                <constraint firstItem="1CH-xI-m0r" firstAttribute="top" secondItem="DgQ-mZ-iNY" secondAttribute="bottom" constant="32" id="jxE-Ov-vKO"/>
-                <constraint firstAttribute="trailing" secondItem="1CH-xI-m0r" secondAttribute="trailing" constant="20" id="rTt-RK-BdP"/>
-                <constraint firstItem="DgQ-mZ-iNY" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="tyn-Pa-81q"/>
-                <constraint firstAttribute="trailing" secondItem="eUL-wL-5QQ" secondAttribute="trailing" constant="10" id="yJF-JG-Cb1"/>
+                <constraint firstAttribute="trailing" secondItem="eUL-wL-5QQ" secondAttribute="trailing" constant="10" id="0O2-J6-W59"/>
+                <constraint firstItem="eUL-wL-5QQ" firstAttribute="top" secondItem="ggO-mw-nXi" secondAttribute="bottom" constant="5" id="0hI-Vq-YJC"/>
+                <constraint firstItem="Jbd-xs-0Je" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="2YL-CT-LSS"/>
+                <constraint firstAttribute="trailing" secondItem="Jbd-xs-0Je" secondAttribute="trailing" constant="10" id="4Ks-69-zpr"/>
+                <constraint firstAttribute="bottom" secondItem="eUL-wL-5QQ" secondAttribute="bottom" constant="20.670000000000002" id="FrM-ft-G1H"/>
+                <constraint firstItem="Jbd-xs-0Je" firstAttribute="top" secondItem="DgQ-mZ-iNY" secondAttribute="bottom" constant="15" id="JWa-ta-hoC"/>
+                <constraint firstAttribute="trailing" secondItem="DgQ-mZ-iNY" secondAttribute="trailing" id="KxP-uL-c5v"/>
+                <constraint firstAttribute="trailing" secondItem="ggO-mw-nXi" secondAttribute="trailing" constant="15" id="LbN-WI-C7v"/>
+                <constraint firstItem="ggO-mw-nXi" firstAttribute="top" secondItem="Jbd-xs-0Je" secondAttribute="bottom" constant="5" id="WNW-TO-JmR"/>
+                <constraint firstItem="ggO-mw-nXi" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="15" id="Ztu-m8-fFc"/>
+                <constraint firstItem="DgQ-mZ-iNY" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="olv-dE-jdT"/>
+                <constraint firstItem="eUL-wL-5QQ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="qoo-2s-7iD"/>
+                <constraint firstItem="DgQ-mZ-iNY" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="wT0-0X-bmt"/>
             </constraints>
-            <size key="customSize" width="204" height="241"/>
+            <size key="customSize" width="187" height="238"/>
             <connections>
                 <outlet property="restImage" destination="DgQ-mZ-iNY" id="0Dv-Vy-ahR"/>
                 <outlet property="restLocation" destination="eUL-wL-5QQ" id="DyD-TG-lFj"/>
                 <outlet property="restName" destination="Jbd-xs-0Je" id="HoP-Ei-Myp"/>
-                <outlet property="restRate" destination="uUb-Sf-l7d" id="Kid-1q-ZH7"/>
             </connections>
-            <point key="canvasLocation" x="152.67175572519082" y="53.87323943661972"/>
+            <point key="canvasLocation" x="138.1679389312977" y="52.816901408450704"/>
         </collectionViewCell>
     </objects>
 </document>
